# yt_pilot

./: README.md  Yt.py  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/: architecture.md  sample-report.json
tests/: conftest.py
tests/contract/: test_captions_modes.py  test_cli_args.py  test_dry_run_json.py  test_filtering.py  test_naming_template.py  test_report_schema.py  test_resume_manifest.py
tests/integration/: test_captions_flow.py  test_download_with_report.py  test_dry_run_human.py  test_resume_flow.py
tests/unit/: test_captions_service.py  test_filtering.py  test_manifest.py  test_naming.py  test_planner.py  test_reporting.py
yt_downloader/: __init__.py  captions.py  cli.py  config.py  downloader.py  filtering.py  logging_utils.py  manifest.py  models.py  naming.py  planner.py  plugins.py  reporting.py  tui.css  tui.py
