[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-downloader"
version = "0.1.0"
description = "Modular YouTube playlist downloader with captions, resume, dry-run, and reporting"
authors = [ { name = "Unknown" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pytube>=15.0.0",
    "youtube-transcript-api>=0.6.2",
    "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "jsonschema>=4.21.0"
]

[project.scripts]
yt-downloader = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_downloader*"]

[tool.pytest.ini_options]
# Mirror pytest.ini for single-source config (pyproject precedence optional)
addopts = "-q"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.yt_downloader]
default_quality = "720p"
